# software-design-itmo

./: .gitmodules  LRUCache.hs
Lab2/: ChangeLog.md  Lab2.cabal  shell.nix  stack.yaml
Lab2/src/lib/: Networking.hs  Twitter.hs
Lab2/src/main/: Main.hs
Lab2/test/: Boilerplate.hs  GetStatisticsSpec.hs
actors-test/: actors-test.cabal  shell.nix  stack.yaml
actors-test/src/: Actors.hs  Internal.hs  Main.hs  Model.hs  SearchEngineStub.hs
aop/: aop.cabal  stack.yaml
aop/src/: Main.hs
aop/src/AOP/: Default.hs  ProtectedPointcuts.hs
aop/src/AOP/Internal/: AOPMonad.hs  AOT.hs  JoinpointModel.hs  LessGen.hs  OpenApp.hs  PointcutLanguage.hs  PolyTypeable.hs  PolyTypeableUtils.hs  StableNamesEq.hs  Typeable1Monad.hs
clock-demo/: .gitignore  client_session_key.aes  clock-demo.cabal  shell.nix
clock-demo/src/: EventStats.hs  Main.hs  MonadTime.hs
clock-demo/test/: GlobalSpec.hs
graph-plotter/: .gitignore  LICENSE  Main.hs  graph-plotter.cabal  shell.nix  stack.yaml
graph-plotter/src/: Cairo.hs  Class.hs  Diagrams.hs  Main.hs
polish-parser/: Main.hs  polish-parser.cabal  shell.nix
react-demo/: react-demo.cabal  shell.nix  stack.yaml
react-demo/src/: Main.hs
refactoring/: .gitignore  pom.xml
refactoring/src/main/java/ru/akirakozov/sd/refactoring/servlet/: AddProductServlet.java  DBHandler.java  GetProductsServlet.java  QueryServlet.java  ServletCommon.java
yesod-serv/: ChangeLog.md  shell.nix  stack.yaml  yesod-serv.cabal
yesod-serv/src/: ControlView.hs  Main.hs  Model.hs
