name:                react-demo
version:             0.1.0.0
synopsis:            FPR demo
license:             GPL-3
license-file:        LICENSE
author:              Mikhail Volkhov
maintainer:          volhovm.cs@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable actors-run
  main-is:             Main.hs
--  other-modules:       Main
  -- other-extensions:
  build-depends:       aeson >= 1.0.2.1
                     , base >=4.9 && <4.10
                     , containers >= 0.5.7.1
                     , data-default
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , http-types
                     , lens >= 4.14
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , reactive-banana >= 1.1.0.0
                     , text >= 1.2.2.1
                     , universum
                     , wai
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       FlexibleContexts
                       StandaloneDeriving
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
